# npc-wars

./: .gitmodules  README.md  asset-manifest.json  index.html
.github/workflows/: deploy.yaml
api/: 1l_relu.code  1l_relu.pf  1l_relu.vk  Cargo.toml
api/src/: main.rs
contracts/: .gitignore  remappings.txt
contracts/broadcast/Deploy.s.sol/31337/: run-1677799788.json  run-1677800352.json  run-latest.json
contracts/script/: Deploy.s.sol
contracts/src/: Competition.sol  CompetitionFactory.sol  NPC.sol  NPCFactory.sol  Verifier.sol  verifier.sol
frontend/: .env  codegen.yaml  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/abis/: NPCFactory.json
frontend/src/components/: Button.tsx  ChallengeCard.tsx  Container.tsx  Input.tsx  Loader.tsx  Slider.tsx  Text.tsx  TextBox.tsx  WalletButton.tsx
frontend/src/graphql/: competitions.graphql  generated.ts  npc.graphql
frontend/src/pages/: ;  Fight.tsx  Home.tsx
static/css/: main.6fd63386.css  main.6fd63386.css.map  main.de2651ab.css  main.de2651ab.css.map
static/js/: main.3938ba70.js  main.3938ba70.js.map  main.8b2193a4.js  main.8b2193a4.js.map  main.a19522dc.js  main.a19522dc.js.map  main.bb43f437.js  main.bb43f437.js.map  main.f66dd21b.js  main.f66dd21b.js.LICENSE.txt  main.f66dd21b.js.map
subgraph/: .gitignore  docker-compose.yaml  networks.json  package.json  schema.graphql  subgraph.yaml
subgraph/src/: competitions.ts  joins.ts  npcs.ts
